--- a/Authorize.Test/Authorize.Test.csproj
+++ b/Authorize.Test/Authorize.Test.csproj
@@ -8,6 +8,7 @@
     <RootNamespace>Authorize.Test</RootNamespace>
     <AssemblyName>Authorize.Test</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <ReleaseVersion>0.1.1</ReleaseVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
